// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialCache cache paths [custom cache path with json suffix] correctly adds a new credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\"
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with json suffix] correctly deletes an existing credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {}
}
"
`;

exports[`CredentialCache cache paths [custom cache path with json suffix] correctly sets credentialMetadata: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\",
      \\"credentialMetadata\\": {
        \\"a\\": 1,
        \\"b\\": true
      }
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with json suffix] correctly trims expired credentials: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {}
}
"
`;

exports[`CredentialCache cache paths [custom cache path with json suffix] correctly updates an existing credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"new-test-value\\"
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with json suffix] correctly updates credentialMetadata: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\",
      \\"credentialMetadata\\": {
        \\"c\\": [
          \\"a\\",
          \\"b\\",
          \\"c\\"
        ]
      }
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with json suffix] initializes a credential cache correctly when one exists on disk with a expired credential: expiration 1`] = `1970-01-01T00:00:00.100Z`;

exports[`CredentialCache cache paths [custom cache path with no suffix] correctly adds a new credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\"
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with no suffix] correctly deletes an existing credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {}
}
"
`;

exports[`CredentialCache cache paths [custom cache path with no suffix] correctly sets credentialMetadata: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\",
      \\"credentialMetadata\\": {
        \\"a\\": 1,
        \\"b\\": true
      }
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with no suffix] correctly trims expired credentials: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {}
}
"
`;

exports[`CredentialCache cache paths [custom cache path with no suffix] correctly updates an existing credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"new-test-value\\"
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with no suffix] correctly updates credentialMetadata: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\",
      \\"credentialMetadata\\": {
        \\"c\\": [
          \\"a\\",
          \\"b\\",
          \\"c\\"
        ]
      }
    }
  }
}
"
`;

exports[`CredentialCache cache paths [custom cache path with no suffix] initializes a credential cache correctly when one exists on disk with a expired credential: expiration 1`] = `1970-01-01T00:00:00.100Z`;

exports[`CredentialCache cache paths [default cache path] correctly adds a new credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\"
    }
  }
}
"
`;

exports[`CredentialCache cache paths [default cache path] correctly deletes an existing credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {}
}
"
`;

exports[`CredentialCache cache paths [default cache path] correctly sets credentialMetadata: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\",
      \\"credentialMetadata\\": {
        \\"a\\": 1,
        \\"b\\": true
      }
    }
  }
}
"
`;

exports[`CredentialCache cache paths [default cache path] correctly trims expired credentials: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {}
}
"
`;

exports[`CredentialCache cache paths [default cache path] correctly updates an existing credential: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"new-test-value\\"
    }
  }
}
"
`;

exports[`CredentialCache cache paths [default cache path] correctly updates credentialMetadata: credential cache file 1`] = `
"{
  \\"version\\": \\"0.1.0\\",
  \\"cacheEntries\\": {
    \\"test-credential\\": {
      \\"expires\\": 0,
      \\"credential\\": \\"test-value\\",
      \\"credentialMetadata\\": {
        \\"c\\": [
          \\"a\\",
          \\"b\\",
          \\"c\\"
        ]
      }
    }
  }
}
"
`;

exports[`CredentialCache cache paths [default cache path] initializes a credential cache correctly when one exists on disk with a expired credential: expiration 1`] = `1970-01-01T00:00:00.100Z`;
